--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install Kubeval Tekton Task
       run: |
         export KUBECONFIG="$(kind get kubeconfig-path)"
-        kubectl apply -f https://raw.githubusercontent.com/tektoncd/catalog/master/kubeval/kubeval.yaml
+        kubectl apply -f https://raw.githubusercontent.com/tektoncd/catalog/main/task/kubeval/0.1/kubeval.yaml
     - name: Run Kubeval Task
       run: |
         export KUBECONFIG="$(kind get kubeconfig-path)"
